samples/_failures_safe/1761732089_45036c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c06a9dd.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_2c06a9dd.c:148:19: error: expected ‘)’ at end of input
  148 |         if (!lexer
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_2c06a9dd.c:148:9: error: expected declaration or statement at end of input
  148 |         if (!lexer
      |         ^~
./samples/SAFE/__tmp_2c06a9dd.c:148:9: error: expected declaration or statement at end of input
